--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
+    <!---------------------------------------animate on scroll.css--------------------------------------->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!---------------------------------------animate.css--------------------------------------->
 
     <link
@@ -43,7 +45,7 @@
     ></script>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid overflow-x-hidden">
       <div class="row">
         <div class="col main-body ">
     <!--------------------------------------------------------------navbar-->
@@ -80,6 +82,9 @@
                 </div>
             </div>
     <!--------------------------------------------------------------banner-->
+    <div data-aos="fade-right"
+     data-aos-offset="300"
+     data-aos-easing="ease-in-sine">
             <div class="row justify-content-center ms-1 me-1 banner">
                 <div class="col-md-5 col-11  align-self-center">
                     <img src="images/text.png" alt="" >
@@ -92,6 +97,7 @@
                 <div class="col-md-7 col-11 align-self-center text-center ">
                     <img src="images/1.png" alt="" class="image-round banner-image animate__animated animate__zoomIn">
                 </div>
+            </div>
             </div>
     <!--------------------------------------------------------------brands-->
             <div class="row justify-content-evenly brand-row row-cols-auto">
@@ -107,7 +113,10 @@
                 <p>Collect Some NFTs</p>
               </div>
             </div>
-    <!--------------------------------------------------------------slider-->            
+    <!--------------------------------------------------------------slider-->   
+    <div data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000">         
             <div class="row">
               <div class="col collect-nft-slider">
                 <div id="carouselExampleIndicators" class="carousel slide">
@@ -321,7 +330,11 @@
                 </div>
               </div>
             </div>
-    <!--------------------------------------------------------------Top Creators-->    
+    </div>
+    <!--------------------------------------------------------------Top Creators-->
+    <div data-aos="fade-right"
+     data-aos-offset="300"
+     data-aos-easing="ease-in-sine">
             <div class="row">
               <div class="col">
                 <div class="row">
@@ -367,9 +380,11 @@
                 </div>
               </div>
             </div>
+          </div>   
     <!--------------------------------------------------------------Subscribe--> 
-            <div class="row justify-content-center">
-      <div class="col-10 p-0">
+    <div data-aos="fade-left"
+     data-aos-offset="300"
+     data-aos-easing="ease-in-sine">
         <br><br>
         <div class="row subscribe justify-content-center">
           <div class="col-10 col-md-6 p-3"><img src="images/4.png" alt=""></div>
@@ -385,8 +400,12 @@
         </div>
 
       </div>
-            </div>
+     </div>
+     </div>
     <!--------------------------------------------------------------NFTs collection--> 
+    <div data-aos="fade-right"
+    data-aos-offset="300"
+    data-aos-easing="ease-in-sine">
             <div class="row">
       <div class="col">
         <div class="row">
@@ -427,8 +446,12 @@
           </div>
         </div>
       </div>
-            </div>     
+            </div>   
+            </div>  
     <!--------------------------------------------------------------blog--> 
+    <div data-aos="fade-left"
+    data-aos-offset="300"
+    data-aos-easing="ease-in-sine">
             <div class="row">
               <div class="col">
                 <div class="row">
@@ -468,6 +491,7 @@
                   </div>
                 </div>
               </div>
+            </div>
             </div>
     <!--------------------------------------------------------------footer--> 
             <div class="row justify-content-center">
@@ -523,7 +547,13 @@
         </div>
     </div>
 
-   
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+    AOS.init({
+      duration: 1000,  
+      delay:10   // Delay before animation starts in milliseconds
+    });
+    </script>
     <!--------------------------------------------------------------javascript-->
     <script src="home.js" async defer></script>
     <script
