--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     ></script>
   </head>
   <body>
-    <div class="container-fluid overflow-x-hidden">
+    <div class="container-lg overflow-x-hidden">
       <div class="row">
         <div class="col main-body ">
     <!--------------------------------------------------------------navbar-->
